# jax-colu

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmarks/: profile_xla.py  run_benchmarks.py  train_cap_rotation.py
src/jax_colu/: __init__.py  _dispatch.py  _kernel_math.py  _reference.py
src/jax_colu/gpu/: __init__.py  _colu.py  _rcolu.py  _rcolu_mgpu.py
src/jax_colu/tpu/: __init__.py  _colu.py  _rcolu.py
tests/: conftest.py  test_dispatch.py  test_gpu_correctness.py  test_gradients.py  test_performance.py  test_reference.py  test_tpu.py
